aws/cloud-formation-stacks/lab-env/lab-env_and_ssm-resources.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: >
  Combined AWS CloudFormation Template to create a VPC with one public subnet and two private subnets with a NAT Gateway, deploy three servers, enable AWS Systems Manager capabilities, and configure security groups.

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: lab-supernet
    DeletionPolicy: Delete

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: lab-supernet-igw
    DeletionPolicy: Delete

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
    DeletionPolicy: Delete

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: public-subnet1
    DeletionPolicy: Delete

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: private-subnet1
    DeletionPolicy: Delete

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: private-subnet2
    DeletionPolicy: Delete

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: lab-supernet-public-route-table
    DeletionPolicy: Delete

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
    DeletionPolicy: Delete

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref RouteTable
    DeletionPolicy: Delete

  EIP:
    Type: AWS::EC2::EIP
    DependsOn: AttachGateway
    Properties:
      Domain: vpc
    DeletionPolicy: Delete

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt EIP.AllocationId
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: lab-supernet-nat-gateway
    DeletionPolicy: Delete

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: lab-supernet-private-route-table-1
    DeletionPolicy: Delete

  PrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway
    DeletionPolicy: Delete

  PrivateSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1
    DeletionPolicy: Delete

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: lab-supernet-private-route-table-2
    DeletionPolicy: Delete

  PrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway
    DeletionPolicy: Delete

  PrivateSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable2
    DeletionPolicy: Delete

  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: PublicInstanceSG
      GroupDescription: Enable SSH and RDP access from a specific IP
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 73.234.7.17/32
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: 73.234.7.17/32
      Tags:
        - Key: Name
          Value: public-instance-sg
    DeletionPolicy: Delete

  InternalSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: InternalSG
      GroupDescription: Allow all traffic within the VPC
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: internal-sg
    DeletionPolicy: Delete

  SSMIAMRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
      RoleName: SSMIAMRole

  SSMInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref SSMIAMRole
      InstanceProfileName: SSMInstanceProfile

  PublicInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-07d9456e59793a7d5
      SubnetId: !Ref PublicSubnet
      KeyName: lab-use2-key-pair
      IamInstanceProfile: !Ref SSMInstanceProfile
      SecurityGroupIds:
        - !Ref PublicSecurityGroup
        - !Ref InternalSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          <powershell>
          Install-PackageProvider -Name NuGet -MinimumVersion 2.8.5.201 -Force
          Install-Module -Name AWS.Tools.Installer -Force
          Install-AWSToolsModule AWS.Tools.S3 -Force
          Install-Module -Name AWSPowerShell -Force -AllowClobber
          Invoke-WebRequest -Uri https://s3.amazonaws.com/amazon-ssm-us-east-1/latest/windows_amd64/AmazonSSMAgentSetup.exe -OutFile $env:USERPROFILE\Desktop\SSMAgent_setup.exe
          Start-Process -FilePath $env:USERPROFILE\Desktop\SSMAgent_setup.exe -ArgumentList '/S' -NoNewWindow -Wait
          Restart-Computer -Force
          </powershell>
      Tags:
        - Key: Name
          Value: public-jump-host
    DeletionPolicy: Delete

  PrivateInstance1:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-07d9456e59793a7d5
      SubnetId: !Ref PrivateSubnet1
      KeyName: lab-use2-key-pair
      IamInstanceProfile: !Ref SSMInstanceProfile
      SecurityGroupIds:
        - !Ref InternalSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          <powershell>
          Install-PackageProvider -Name NuGet -MinimumVersion 2.8.5.201 -Force
          Install-Module -Name AWS.Tools.Installer -Force
          Install-AWSToolsModule AWS.Tools.S3 -Force
          Install-Module -Name AWSPowerShell -Force -AllowClobber
          Invoke-WebRequest -Uri https://s3.amazonaws.com/amazon-ssm-us-east-1/latest/windows_amd64/AmazonSSMAgentSetup.exe -OutFile $env:USERPROFILE\Desktop\SSMAgent_setup.exe
          Start-Process -FilePath $env:USERPROFILE\Desktop\SSMAgent_setup.exe -ArgumentList '/S' -NoNewWindow -Wait
          Restart-Computer -Force
          </powershell>
      Tags:
        - Key: Name
          Value: private-windows-1
    DeletionPolicy: Delete

  PrivateInstance2:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0a0e5d9c7acc336f1
      SubnetId: !Ref PrivateSubnet2
      KeyName: lab-use2-key-pair
      IamInstanceProfile: !Ref SSMInstanceProfile
      SecurityGroupIds:
        - !Ref InternalSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          apt-get update -y
          apt-get install -y amazon-ssm-agent
          apt-get install -y aws-cli
          systemctl enable amazon-ssm-agent
          systemctl start amazon-ssm-agent
          reboot
      Tags:
        - Key: Name
          Value: private-ubuntu-1
    DeletionPolicy: Delete

Outputs:
  VPCId:
    Description: VPC ID
    Value: !Ref VPC
  PublicSubnetId:
    Description: Public Subnet ID
    Value: !Ref PublicSubnet
  PrivateSubnet1Id:
    Description: Private Subnet 1 ID
    Value: !Ref PrivateSubnet1
  PrivateSubnet2Id:
    Description: Private Subnet 2 ID
    Value: !Ref PrivateSubnet2
  NatGatewayId:
    Description: NAT Gateway ID
    Value: !Ref NatGateway
  PublicInstanceId:
    Description: Public Instance ID
    Value: !Ref PublicInstance
  PrivateInstance1Id:
    Description: Private Instance 1 ID
    Value: !Ref PrivateInstance1
  PrivateInstance2Id:
    Description: Private Instance 2 ID
    Value: !Ref PrivateInstance2
  SSMIAMRole:
    Description: IAM Role for SSM
    Value: !Ref SSMIAMRole
  SSMInstanceProfile:
    Description: Instance Profile for SSM
    Value: !Ref SSMInstanceProfile
